--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ et-xmlfile==1.0.1
 fastcache==1.0.2
 Flask==0.12.2
 Flask-Cors==3.0.2
+Flask-SQLAlchemy==2.3.2
 gevent==1.2.1
 greenlet==0.4.12
 gunicorn==19.7.1
@@ -111,6 +112,8 @@ pylint==1.6.4
 pyodbc==4.0.16
 pyOpenSSL==17.0.0
 pyparsing==2.1.4
+pyPdf==1.13
+PyPDF2==1.26.0
 pytest==3.0.7
 python-dateutil==2.6.0
 pytz==2017.2
